@@ -1,16 +1,22 @@
 package uk.gov.moj.cp.service;
 
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import uk.gov.moj.cp.dto.CaseDetailsDto;
 import uk.gov.moj.cp.dto.CaseDetailsDto.CaseDetailsCourtScheduleDto.CaseDetailsHearingDto;
 import uk.gov.moj.cp.dto.CaseDetailsDto.CaseDetailsCourtScheduleDto.CaseDetailsHearingDto.CaseDetailsCourtSittingDto;
 import uk.gov.moj.cp.dto.CourtScheduleDto;
+import uk.gov.moj.cp.metrics.TrackMyCaseMetricsService;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
+@Slf4j
 public class CaseDetailsService {
 
     @Autowired
@@ -18,26 +24,52 @@ public class CaseDetailsService {
     @Autowired
     private CourtHouseService courtHouseService;
 
+    @Autowired
+    private OAuthTokenService oauthTokenService;
+
+    @Autowired
+    private TrackMyCaseMetricsService trackMyCaseMetricsService;
 
     public CaseDetailsDto getCaseDetailsByCaseUrn(String caseUrn) {
-        List<CourtScheduleDto> courtSchedule = courtScheduleService.getCourtScheduleByCaseUrn(caseUrn);
+        String accessToken = oauthTokenService.getJwtToken();
+        List<CourtScheduleDto> courtSchedule = courtScheduleService.getCourtScheduleByCaseUrn(accessToken, caseUrn);
 
-        return new CaseDetailsDto(
+        CaseDetailsDto caseDetails = new CaseDetailsDto(
+            caseUrn,
             courtSchedule.stream()
                 .map(schedule -> new CaseDetailsDto.CaseDetailsCourtScheduleDto(
                     schedule.hearingDtos().stream()
-                        .map(this::getCaseDetailsHearingDto)
-                        .collect(Collectors.toList())
+                        .map(t -> getHearingDetails(accessToken,t))
+                        .filter(Objects::nonNull)
+                        .toList()
                 ))
-                .collect(Collectors.toList())
+                .toList()
         );
+        String courtHouseAndRoomIds = caseDetails.courtSchedule().stream()
+            .flatMap(a -> a.hearings().stream()
+                .flatMap(b -> b.courtSittings().stream()
+                    .map(c -> c.courtHouse().courtHouseId() + ":" + c.courtHouse().courtRoomId())))
+            .collect(Collectors.joining("  "));
+
+        log.atInfo().log("caseUrn : {} -> Received CourtHouse Id and courtRoomId :{}",
+                         caseUrn, courtHouseAndRoomIds);
+        trackMyCaseMetricsService.incrementCaseDetailsCount(caseUrn);
+        return caseDetails;
+
     }
 
-    private CaseDetailsHearingDto getCaseDetailsHearingDto(CourtScheduleDto.HearingDto hearing) {
+    private CaseDetailsHearingDto getHearingDetails(String accessToken, CourtScheduleDto.HearingDto hearing) {
+        List<CaseDetailsCourtSittingDto> futureSittings = hearing.courtSittingDtos().stream()
+            .filter(sitting -> validateSittingDateNotInPast(sitting.sittingStart()))
+            .map(a -> getHearingSchedule(accessToken, a))
+            .toList();
+
+        if (futureSittings.isEmpty()) {
+            return null;
+        }
+
         return new CaseDetailsHearingDto(
-            hearing.courtSittingDtos().stream()
-                .map(this::getCaseDetailsCourtSittingDto)
-                .collect(Collectors.toList()),
+            futureSittings,
             hearing.hearingId(),
             hearing.hearingType(),
             hearing.hearingDescription(),
@@ -45,14 +77,20 @@ public class CaseDetailsService {
         );
     }
 
-    private CaseDetailsCourtSittingDto getCaseDetailsCourtSittingDto(
-        CourtScheduleDto.HearingDto.CourtSittingDto sitting) {
+
+    private CaseDetailsCourtSittingDto getHearingSchedule(
+        String accessToken, CourtScheduleDto.HearingDto.CourtSittingDto sitting) {
         return new CaseDetailsCourtSittingDto(
             sitting.judiciaryId(),
             sitting.sittingStart(),
             sitting.sittingEnd(),
-            courtHouseService.getCourtHouseById(sitting.courtHouse(), sitting.courtRoom())
+            courtHouseService.getCourtHouseById(accessToken, sitting.courtHouse(), sitting.courtRoom())
         );
+    }
+
+    private boolean validateSittingDateNotInPast(String dateTimeString) {
+        LocalDate sittingDate = LocalDateTime.parse(dateTimeString).toLocalDate();
+        return !sittingDate.isBefore(LocalDate.now());
     }
 }
 
